--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,11 +1,23 @@
+/* hide scroll on .cool-scroll if mouse not hovering inside */
+.cool-scroll {
+    overflow-y: scroll;
+    overflow-x: hidden;
+    transition: all 0.5s ease-in-out;
+}
+.cool-scroll::-webkit-scrollbar
+{
+    width: 6px;
+    opacity: 0;
+}
+
 .cool-scroll::-webkit-scrollbar-track
 {
     -webkit-box-shadow: inset 0 0 6px rgba(80, 80, 80, 0.3);
 }
 
-.cool-scroll::-webkit-scrollbar
+.cool-scroll:hover::-webkit-scrollbar
 {
-    width: 6px;
+    opacity: 1;
 }
 
 .cool-scroll::-webkit-scrollbar-thumb
